adjusted look of css to look more readable need to do tablet layout along with mobile layout

--- a/index.html
+++ b/index.html
@@ -58,33 +58,34 @@
         </div>
         <div class="footer">
             <div class="text5">
-                <h1>CUSTOMER SERVICE</h1>
+                <h3>CUSTOMER SERVICE</h3>
                 <p>Contact Us</p>
                 <p>Returns</p>
                 <p>Shipping</p>
                 <p>FAQ's</p>
             </div>
             <div class="text6">
-                <h1>OUR COMPANY</h1>
+                <h3>OUR COMPANY</h3>
                 <P>Gift Cards</P>
                 <P>Privacy Policy</P>
                 <P>Terms & Conditions</P>
                 <P>About Us</P>
             </div>
             <div class="text7">
-                <h1>SIGN UP AND SAVE!</h1>
-                <p>Gain early access, exclusive offers and more. Sign up and save 10% OFF your first order.</p>
-                <h1>ENTER YOUR EMAIL ADDRESS</h1>
-                <H1>SUBSCRIBE</H1>
+                <h3>SIGN UP AND SAVE!</h3>
+                <p>Gain early access, exclusive offers and more.<br> Sign up and save 10% OFF your first order.</p>
+                <h5>ENTER YOUR EMAIL ADDRESS</h5>
+                <H5>SUBSCRIBE</H5>
             </div>
-            <div class="lt-combo2">
-                <div class="t2">
-                    <p>@ 7DIAMONDS</p>
-                </div>
-                <div class="l2">
-                    <img src="assets/logo2.png">
-                </div>
+        </div>
+        <div class="sponsor">
+            <div class="text8">
+                <p>@ 7DIAMONDS</p>
             </div>
+            <div class="img14">
+                <img src="assets/logo2.png">
+            </div>
+        </div>
         </div>
     </body>
 </html>
