html and css complete with 3 templates. adjust sizes and add more detailed css

--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
                 <h1>FREE STANDARD SHIPPING ON ALL ORDERS</h1>
             </div>
             <div class="text2">
+                <div class="section">
+                    <img src="assets/section.png">
+                </div>
                 <div class="logo">
                     <img src="assets/fixed-logo.png">
+                </div>
+                <div class="lock">
+                    <img src="assets/lock.png">
                 </div>
                 <div class="options">
                     <div class="p1"><p>ACCOUNT</p></div>
@@ -35,9 +41,7 @@
             <div class="row2">
                 <div class="img2"><img src="assets/photo2.png"></div>
                 <div class="img3"><img src="assets/photo3.png"></div>
-                <div class="img4"><img src="assets/photo4.png"></div>
-            </div>
-            <div class="row3">
+                 <div class="img4"><img src="assets/photo4.png"></div>
                 <div class="img5"><img src="assets/photo5.png"></div>
                 <div class="img6"><img src="assets/photo6.png"></div>
                 <div class="img7"><img src="assets/photo7.png"></div>
