finished product at the end of time

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="row2">
                 <div class="img2"><img src="assets/photo2.png"></div>
                 <div class="img3"><img src="assets/photo3.png"></div>
-                 <div class="img4"><img src="assets/photo4.png"></div>
+                <div class="img4"><img src="assets/photo4.png"></div>
                 <div class="img5"><img src="assets/photo5.png"></div>
                 <div class="img6"><img src="assets/photo6.png"></div>
                 <div class="img7"><img src="assets/photo7.png"></div>
@@ -77,9 +77,11 @@
             </div>
             <div class="text7">
                 <h3>SIGN UP AND SAVE!</h3>
-                <p>Gain early access, exclusive offers and more.<br> Sign up and save 10% OFF your first order.</p>
-                <h5>ENTER YOUR EMAIL ADDRESS</h5>
-                <H5>SUBSCRIBE</H5>
+                <p>Gain early access, exclusive offers and more.<br>Sign up and save 10% OFF your first order.</p>
+                <input type="email" value="ENTER YOUR EMAIL ADDRESS">
+                <div class="button">
+                    <button type="button">SUBSCRIBE</button>
+                </div>
             </div>
         </div>
         <div class="sponsor">
@@ -89,6 +91,7 @@
             <div class="img14">
                 <img src="assets/logo2.png">
             </div>
+            
         </div>
         </div>
     </body>
